maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: not found: value random3
    	r = random3();
            ^