maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
def keepHandOnSideWall() {
	while (!(estFaceMur())) {
	avance();}
	gauche();
		}


  var r = 0;
    while (!(estSurBiscuit())) {
    	r = random3();
    	if (r==0) {
    		if (!(estFaceMur)) {
    			keepHandOnSideWall();
    		}
    	}
    	else if (r==1) {
    		gauche();
    	} else {
    		droite();
    	}
    }
    prendBiscuit();
}
